<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="10dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="9dp"
                android:text="@string/nagile"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="7.5dp"
                android:gravity="center"
                android:text="@string/text_nagile"
                android:textColor="@color/main_text_color"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/desc"
                app:layout_constraintBottom_toTopOf="@+id/send"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <EditText
                    android:id="@+id/editText"
                    android:layout_marginTop="5dp"
                    android:hint="@string/d_ndiri"
                    android:gravity="top"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/main_text_color"
                    android:background="@drawable/editext_b"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send"
                app:layout_constraintTop_toBottomOf="@+id/layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/send"
                app:backgroundTint="#EC2039"
                app:elevation="10dp"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowDy="5"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:paddingEnd="23dp"
                android:paddingStart="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                app:cornerRadius="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>