<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddCardFragment"
    >
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_bg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp"
        android:layout_height="250dp">
        <ImageView
            android:src="@drawable/rules_bg"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_main"
        style="@style/TopCornerRadius"
        app:cardElevation="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-40dp"
        app:layout_constraintTop_toBottomOf="@+id/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/free"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ic_free"
                    android:src="@drawable/ic_radio_check"
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:text="@string/free"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/arzan"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ic_arzan"
                    android:src="@drawable/i_radio"
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:text="@string/arzan_aksiya"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/banner"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ic_banner"
                    android:src="@drawable/i_radio"
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:text="@string/banner"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/vip"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ic_vip"
                    android:src="@drawable/i_radio"
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:text="@string/vip"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ic_profile"
                    android:src="@drawable/i_radio"
                    android:layout_gravity="center_vertical"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:text="@string/post"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/send"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="55dp"
            android:textColor="@color/white"
            android:text="@string/send"
            app:backgroundTint="@color/main_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        app:layout_constraintBottom_toTopOf="@+id/card_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="-40dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:elevation="20dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image"
                android:scaleType="fitXY"
                android:src="@drawable/pay_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>