<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MonthFragment">
    <RelativeLayout
        android:id="@+id/posts"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ic_post"
            android:src="@drawable/stat_post"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:layout_marginStart="13dp"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <TextView
            android:textColor="@color/main_text_color"
            android:text="@string/posts"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/all_post_count"
            android:text="0"
            android:textSize="20sp"
            android:textColor="@color/main_text_color"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:textStyle="bold"
            android:layout_marginEnd="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ic_view"
            android:src="@drawable/stat_view"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="13dp"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <TextView
            android:text="@string/views"
            android:textSize="20sp"
            android:textColor="@color/main_text_color"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/view_count"
            android:text="0"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_centerVertical="true"
            android:textColor="@color/main_text_color"
            android:textStyle="bold"
            android:layout_marginEnd="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/likes"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/stat_like"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:layout_marginStart="13dp"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <TextView
            android:text="@string/likes"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:textColor="@color/main_text_color"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/like_count"
            android:text="0"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/main_text_color"
            android:layout_gravity="end"
            android:gravity="end"
            android:textStyle="bold"
            android:layout_marginEnd="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/share"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/likes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/stat_share"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"
            android:layout_marginStart="13dp"
            android:layout_width="45dp"
            android:layout_height="45dp"/>
        <TextView
            android:text="@string/share"
            android:textSize="20sp"
            android:textColor="@color/main_text_color"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/share_count"
            android:text="0"
            android:textSize="20sp"
            android:textColor="@color/main_text_color"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:gravity="end"
            android:textStyle="bold"
            android:layout_marginEnd="13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>